# Formuliazer

./: CMakeLists.txt
Formuliazer/: CMakeLists.txt  Formuliazer.cpp  Formuliazer.h  formualizer.cpp  formualizer.h
Formuliazer/libs/: Renderer.h  rlImGui.h
Formuliazer/resources/shaders/: vignette.fs
Formuliazer/src/: Renderer.cpp  imgui_demo.cpp  rlImGui.cpp
